--- a/MVCLearning.csproj
+++ b/MVCLearning.csproj
@@ -162,7 +162,7 @@
     <Compile Include="Areas\Admin\Controllers\HomeController.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
-    <Compile Include="ErrorMessages.cs" />
+    <Compile Include="CustomDataAnnotations\DateRangeAttribute.cs" />
     <Compile Include="CustomDataAnnotations\NotRequiredWhenAttribute.cs" />
     <Compile Include="CustomDataAnnotations\RequiredWhenAttribute.cs" />
     <Compile Include="Global.asax.cs">
@@ -176,6 +176,11 @@
     <Compile Include="Models\ValidationExample\PartyDto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="Translations\ErrorMessages\ErrorMessages.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ErrorMessages.tt</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
@@ -233,6 +238,11 @@
     <Content Include="Views\Account\Register.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Home\DefaultValidationEx.cshtml" />
+    <Content Include="Translations\ErrorMessages\ErrorMessages.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>ErrorMessages.cs</LastGenOutput>
+    </Content>
+    <Content Include="Translations\ErrorMessages\ErrorTranslations.xls" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -245,6 +255,9 @@
     <Content Include="fonts\glyphicons-halflings-regular.eot" />
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
